tests/semantic/invalid/undeclared_variable/test1.src
// Invalid: undeclared variable
fn main() -> int {
    int x = 10;
    int y = x + z;
    return y;
}
